Fixed bugzilla bug 20357 for the display of duedate and time for reserve items.

--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -370,7 +370,7 @@
               <? if (isset($row['returnDate']) && $row['returnDate']): ?>&ndash; <span class="small"><?=$this->escapeHtml($row['returnDate'])?></span><? endif; ?>
               <? if (isset($row['duedate']) && $row['duedate']): ?>
                 <?/*Only display duedates for loaned items*/?>
-                <? $duedate = ($row['status'] == 'LOANED' ? $this->tab->getDuedate($row) : '');?>
+                <? $duedate = ($row['status'] == 'LOANED' ? $this->tab->getDueDate($row) : '');?>
                 <? if ($duedate == 'no due date unless recalled'): ?>
                 <? $dueHtml = '&ndash; <span class="small">no due date unless recalled</span>'; ?>
                 <? else: ?>
