Added bolding to text.

--- a/themes/phoenix/templates/record/hold.phtml
+++ b/themes/phoenix/templates/record/hold.phtml
@@ -24,16 +24,16 @@
   <? if ($isHold):?>
     <ul>
       <li>Placing a hold request on an item will cause the item to be held for pickup for you as soon as it is available.</li>
-      <li>In Transit items will typically be available within 2-3 days.</li>
-      <li>In Process items will typically be available within 7-10 days.</li>
-      <li>On Order items will typically be available for pickup within 30-60 days, though some may take longer. <br/>Items ordered from outside North America and Europe may take as long as three to six months to arrive.</li>
+      <li><strong>In Transit</strong> items will typically be available within <strong>2-3 days</strong>.</li>
+      <li><strong>In Process</strong> items will typically be available within <strong>7-10 days</strong>.</li>
+      <li><strong>On Order</strong> items will typically be available for pickup within <strong>30-60 days</strong>, though some may take longer. <br/>Items ordered from outside North America and Europe may take as long as three to six months to arrive.</li>
       <li>Multiple requests for the same item are fulfilled in the order in which they are received.</li>
       <li>You will receive an email notice when the item is available for pickup.</li>
     </ul>
   <? else: ?>
     <ul>
-      <li>Recalling a loaned item from another user will cause the item to be due 7 days after the date it is recalled.</li>
-      <li>Recalling an item that is on hold or in transit for hold will cause the item to be due 7 days after the date the prior user borrows the item.</li>
+      <li>Recalling a <strong>loaned</strong> item from another user will cause the item to be due <strong>7 days after the date it is recalled</strong>.</li>
+      <li>Recalling an item that is <strong>on hold</strong> or <strong>in transit for hold</strong> will cause the item to be due <strong>7 days after the date the prior user borrows the item</strong>.</li>
       <li>Multiple requests for the same item are fulfilled in the order in which they are received.</li>
       <li>You will receive an email notice when the item is available for pickup.</li>
     </ul>
