--- a/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
@@ -176,6 +176,9 @@
           <?=$hathiLink?>
         <? endif; ?>
         <?=$this->record($this->driver)->getPreviews()?>
+
+        <div class="deduped-eholdings" data-issns="<?=implode(',', $this->driver->getISSNs())?>"></div>
+
       </div>
       <div class="col-xs-0 right text-right hidden-print hidden-xs format-list">
         <? /* Display qrcode if appropriate: */ ?>
