--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -69,7 +69,7 @@
       <?endif;?>
   <? endif; ?>
   </div><!--/.locpanel-heading online-->
-  <div id="e-links" class="holdings-unit">
+  <div id="e-links" class="holdings-unit" data-issns="<?=implode(',', $this->driver->getISSNs())?>">
   <? if (!empty($urls)): ?>
     <? foreach ($urls as $current): ?>
       <? $linkText = (!empty($current['text']) ? ': '.$current['text'] : ''); ?>
@@ -78,6 +78,7 @@
       </div>
     <? endforeach; ?>
   <? endif; ?>
+
   <? if ($openUrlActive): ?><?=$openUrl->renderTemplate()?><? endif; ?>
 
   <?/*Build a Hathi link for records with a 903 field = to "Hathi" or records with a bib# beginning with ocm or ocn.*/?>
