Added hold and Scan and Deliver links handling for XClosedGen and XClosedCJK location codes.

--- a/themes/phoenix/templates/record/hold.phtml
+++ b/themes/phoenix/templates/record/hold.phtml
@@ -24,6 +24,7 @@
   <? if ($isHold):?>
     <ul>
       <li>Placing a hold request on an item will cause the item to be held for pickup for you as soon as it is available.</li>
+      <li><strong>Regenstein Closed Stack</strong> items will typically be available within <strong>1 business day</strong>.</li>
       <li><strong>In Transit</strong> items will typically be available within <strong>2-3 days</strong>.</li>
       <li><strong>In Process</strong> items will typically be available within <strong>7-10 days</strong>.</li>
       <li><strong>On Order</strong> items will typically be available for pickup within <strong>30-60 days</strong>, though some may take longer. <br/>Items ordered from outside North America and Europe may take as long as three to six months to arrive.</li>
