Supress eholdings if sfx records are returned. Closes issue #50.

--- a/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
@@ -162,7 +162,7 @@
             if(!$this->driver->isCollection()):
               foreach ($urls as $current): ?>
               <? $linkText = (!empty($current['text']) ? ': '.$current['text'] : ''); ?>
-              <div class="e-holdings">
+              <div class="e-holdings local-eholding">
                 <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($current['url']))?>" class="fulltext eLink" target="new">
                     <?=$this->escapeHtml($this->Eholdings()->getEholdingsLinkText($current['type']) . $linkText)?>
                 </a> <?=$current['desc']?>
